[package]
name = "expense-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["chrono", "derive", "runtime-tokio", "sqlite"] }
tokio = { version = "1.45.0", features = ["fs", "macros", "rt"] }
